# sp1-lwe-lr-proof-example

./: README.md
lib/: Cargo.toml
lib/src/: lib.rs
program/: Cargo.toml
program/src/: main.rs
script/: Cargo.toml
script/data/: encrypted_data.ct
